org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Property/Property_no_call_result_in_setter_001/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project Property_no_call_result_in_setter_001 {
	import "${project.baseUri}/001_PropertyTest.kmt"
}
